--- a/assets/scss/components/_home.scss
+++ b/assets/scss/components/_home.scss
@@ -8,7 +8,7 @@ p {
 
 .MainMenuWrapper {
     height: $menuHeight;
-    background-color: $darkHighlightColor;
+    background-color: $darkShadeColor;
     -moz-box-shadow:    0px 1px 8px 0px $shadowColor;
     -webkit-box-shadow: 0px 1px 8px 0px $shadowColor;
     box-shadow:         0px 1px 8px 0px $shadowColor;
